@@ -42,7 +42,8 @@ BoardGamesAtlas.com. On the Movie front a new online search has been added; Movi
 - Discogs.com service now also sets the composer for tracks & albums.
 - References filter will now filter on contains instead of starting with, same for 
   the field filter dialogs.
-- Small layout fixes for the loan administration panel
+- Small layout fixes for the loan administration panel.
+- Added sorting capabilities to the General Field Settings dialog.
 
 [Fixed]
 - Discogs.com service now handles sub tracks correctly.
